Wed Feb  9 09:45:43 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/rdoc/test_rdoc_encoding.rb: remove unnecessary (and wrong)
	  platform-dependent hacks.

Wed Feb  9 00:47:18 2011  Tanaka Akira  <akr@fsij.org>

	* ext/etc/etc.c: parenthesize macro arguments.

Tue Feb  8 19:38:00 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-expr-beg): fix for invalid nest errors.

Tue Feb  8 19:22:59 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in (AC_MSG_CHECKING): fixed typo. the patch is
	  created by Benoit Daloze. Thanks a lot. [Bug #4384][ruby-core:35148]

Tue Feb  8 16:04:03 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (rb_io_s_sysopen): use NUM2MODET() instead NUM2UINT().

Tue Feb  8 15:59:23 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* process.c (rb_run_exec_options_err): use MODET2NUM() instead LONG2NUM().

Tue Feb  8 13:59:56 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: revert r30725. Now we have proper runtime fallback.
	  Therefore, no need compile time disabling. (see r30762).

Tue Feb  8 01:00:21 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* process.c (proc_setgroups): add GC guard to prevent intermediate
	  variable from GC.

Tue Feb  8 00:56:33 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-expr-beg, ruby-in-here-doc-p): tell
	  singleton class definitions from here documents.

	* misc/ruby-mode.el (ruby-expr-beg, ruby-parse-partial): keyword
	  followed by colon is label.

Mon Feb  7 22:56:16 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* lib/benchmark.rb (Benchmark#bmbm): use ensure clause instead of
	  Object#tap to restore STDOUT.sync.

Mon Feb  7 22:34:20 2011  Tanaka Akira  <akr@fsij.org>

	* lib/net/http.rb (Net::HTTP#connect): support SNI (Server Name
	  Indication) for HTTPS.  [ruby-dev:43164]
	  http://stackoverflow.com/questions/4685736/openssl-server-name-indication-support-in-ruby
